<resources>
    <string name="app_name">Siam DailyNew</string>
    <string name="user">User :</string>
    <string name="password">password</string>
    <string name="name">Name :</string>
    <string name="division">คณะ</string>
    <string name="male">Male</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="have_space">Have Space</string>
    <string name="message_have_space">Please Fill All Evaey Black</string>
    <string name="surname">Surname</string>
    <string name="email">Email</string>
    <string name="repassword">repassword</string>
    <string name="title_not_math">Password Not Math</string>
    <string name="message_not_math">Pless Type Two Password Math</string>
    <string name="title_non_choose">Non choose Gender</string>
    <string name="message_non_choose">plese choose Gender</string>
</resources>
