<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--ToolBar-->
    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--Back-->
            <ImageView
                android:id="@+id/imvBack"
                android:src="@mipmap/ic_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <!--Tiele-->
            <TextView
                android:textColor="@color/textcolorPrimary"
                android:text="Please Register"
                android:layout_centerInParent="true"
                android:textStyle="bold"
                android:textSize="@dimen/h1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <!--Save-->
            <ImageView
                android:id="@+id/imvSave"
                android:src="@mipmap/ic_save"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <!--Content-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!--ทำให้หน้าจอเลื่อนได้ -->
        <LinearLayout
            android:padding="@dimen/padding"
            android:layout_margin="@dimen/margin"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!--Name-->
            <EditText
                android:id="@+id/edtName"
                android:background="@drawable/bg_edttext"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryLight"
                android:inputType="text"
                android:hint="@string/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <!--Surname-->
            <EditText
                android:id="@+id/edtSurname"
                android:background="@drawable/bg_edttext"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryLight"
                android:inputType="text"
                android:hint="@string/surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!--Gender-->
            <TextView
                android:text="@string/gender"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:textSize="@dimen/h1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RadioGroup
                android:id="@+id/ragGender"
                android:padding="@dimen/padding"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <!--Male-->
                <RadioButton
                    android:id="@+id/radMale"
                    android:text="@string/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <!--Female-->
                <RadioButton
                    android:id="@+id/radFemale"
                    android:layout_marginLeft="@dimen/margin"
                    android:text="@string/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RadioGroup>

            <!--Email-->
            <EditText
                android:id="@+id/edtEmail"
                android:background="@drawable/bg_edttext"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryLight"
                android:inputType="text"
                android:hint="@string/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!--Division-->
            <TextView
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textSize="@dimen/h1"
                android:text="@string/division"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Spinner
                android:layout_marginBottom="15dp"
                android:id="@+id/spnDivition"
                android:background="@drawable/bg_edttext"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryLight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <!--User-->
            <EditText
                android:id="@+id/edtUser"
                android:background="@drawable/bg_edttext"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryLight"
                android:inputType="text"
                android:hint="@string/user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <!--Password-->
            <EditText
                android:id="@+id/edtPassword"
                android:background="@drawable/bg_edttext"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryLight"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <!--REPassword-->
            <EditText
                android:id="@+id/edtREPassword"
                android:background="@drawable/bg_edttext"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryLight"
                android:inputType="textPassword"
                android:hint="@string/repassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />



            <!--&lt;!&ndash;Show CheckBook&ndash;&gt;-->
            <!--<CheckBox-->
                <!--android:text="Test"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content" />-->



        </LinearLayout>

    </ScrollView>
</LinearLayout>